--- a/about.html
+++ b/about.html
@@ -201,7 +201,7 @@
             <section class="cta-section">
                 <div class="cta-content">
                     <h2>連細節都如此用心的民宿，還有什麼理由不來呢！</h2>
-                    <a href="booking.html" class="btn-primary">即刻預訂</a>
+                    <a href="https://booking.owlting.com/kiwi-villa" class="btn-primary" target="_blank" rel="noopener">即刻預訂</a>
                 </div>
             </section>
         </div>
