--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <li><a href="testimonials.html" class="nav-link">客戶評價</a></li>
                     <li><a href="qa.html" class="nav-link">常見問題</a></li>
                     <li><a href="notice.html" class="nav-link">訂房須知</a></li>
-                    <li><a href="https://booking.owlting.com/kiwi-villa" class="nav-link booking-btn">線上訂房</a></li>
+                    <li><a href="https://booking.owlting.com/kiwi-villa" class="nav-link booking-btn" target="_blank" rel="noopener">線上訂房</a></li>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
