--- a/rooms.html
+++ b/rooms.html
@@ -51,7 +51,7 @@
                     <li><a href="testimonials.html" class="nav-link">客戶評價</a></li>
                     <li><a href="qa.html" class="nav-link">常見問題</a></li>
                     <li><a href="notice.html" class="nav-link">訂房須知</a></li>
-                    <li><a href="https://booking.owlting.com/kiwi-villa" class="nav-link booking-btn">線上訂房</a></li>
+                    <li><a href="https://booking.owlting.com/kiwi-villa" class="nav-link booking-btn" target="_blank" rel="noopener">線上訂房</a></li>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -142,7 +142,7 @@
                                 <li>TOTO涼暖風機</li>
                             </ul>
                         </div>
-                        <a href="https://booking.owlting.com/kiwi-villa" class="btn-primary">立即預訂</a>
+                        <a href="https://booking.owlting.com/kiwi-villa" class="btn-primary" target="_blank" rel="noopener">立即預訂</a>
                     </div>
                 </div>
 
