--- a/rooms.html
+++ b/rooms.html
@@ -204,7 +204,7 @@
                                 <li>超靜音冰箱</li>
                             </ul>
                         </div>
-                        <a href="https://booking.owlting.com/kiwi-villa" class="btn-primary">立即預訂</a>
+                        <a href="https://booking.owlting.com/kiwi-villa" class="btn-primary" target="_blank" rel="noopener">立即預訂</a>
                     </div>
                 </div>
 
@@ -273,7 +273,7 @@
                                 <li>超靜音冰箱</li>
                             </ul>
                         </div>
-                        <a href="https://booking.owlting.com/kiwi-villa" class="btn-primary">立即預訂</a>
+                        <a href="https://booking.owlting.com/kiwi-villa" class="btn-primary" target="_blank" rel="noopener">立即預訂</a>
                     </div>
                 </div>
 
@@ -336,7 +336,7 @@
                                 <li>超靜音冰箱</li>
                             </ul>
                         </div>
-                        <a href="https://booking.owlting.com/kiwi-villa" class="btn-primary">立即預訂</a>
+                        <a href="https://booking.owlting.com/kiwi-villa" class="btn-primary" target="_blank" rel="noopener">立即預訂</a>
                     </div>
                 </div>
 
