--- a/404.html
+++ b/404.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <style>
+        .main-content {
+            padding-top: 6rem;
+        }
         .error-container {
             min-height: 60vh;
             display: flex;
@@ -101,7 +104,7 @@
                     <li><a href="testimonials.html" class="nav-link">客戶評價</a></li>
                     <li><a href="qa.html" class="nav-link">常見問題</a></li>
                     <li><a href="notice.html" class="nav-link">訂房須知</a></li>
-                    <li><a href="https://booking.owlting.com/kiwi-villa" class="nav-link booking-btn">線上訂房</a></li>
+                    <li><a href="https://booking.owlting.com/kiwi-villa" class="nav-link booking-btn" target="_blank" rel="noopener">線上訂房</a></li>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -150,7 +153,7 @@
                             <strong>細說期遇</strong>
                             <small>了解我們的設施特色</small>
                         </a>
-                        <a href="https://booking.owlting.com/kiwi-villa" class="quick-link">
+                        <a href="https://booking.owlting.com/kiwi-villa" class="quick-link" target="_blank" rel="noopener">
                             <i class="fas fa-calendar-check"></i>
                             <strong>線上訂房</strong>
                             <small>立即預訂您的住宿</small>
