--- a/qa.html
+++ b/qa.html
@@ -116,7 +116,7 @@
                     <li><a href="testimonials.html" class="nav-link">客戶評價</a></li>
                     <li><a href="qa.html" class="nav-link active">常見問題</a></li>
                     <li><a href="notice.html" class="nav-link">訂房須知</a></li>
-                    <li><a href="https://booking.owlting.com/kiwi-villa" class="nav-link booking-btn">線上訂房</a></li>
+                    <li><a href="https://booking.owlting.com/kiwi-villa" class="nav-link booking-btn" target="_blank" rel="noopener">線上訂房</a></li>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -287,7 +287,7 @@
                     <div class="offer-content">
                         <h3>特別優惠</h3>
                         <p>若您確實有閱讀完民宿相關規定，并以匯訂金方式訂房者，請聯繫訂房小編，會給您額外優惠（僅限匯款前告知）</p>
-                        <a href="https://booking.owlting.com/kiwi-villa" class="btn-primary">立即預訂</a>
+                        <a href="https://booking.owlting.com/kiwi-villa" class="btn-primary" target="_blank" rel="noopener">立即預訂</a>
                     </div>
                 </div>
             </section>
