--- a/testimonials.html
+++ b/testimonials.html
@@ -71,7 +71,7 @@
                     <li><a href="testimonials.html" class="nav-link active">客戶評價</a></li>
                     <li><a href="qa.html" class="nav-link">常見問題</a></li>
                     <li><a href="notice.html" class="nav-link">訂房須知</a></li>
-                    <li><a href="https://booking.owlting.com/kiwi-villa" class="nav-link booking-btn">線上訂房</a></li>
+                    <li><a href="https://booking.owlting.com/kiwi-villa" class="nav-link booking-btn" target="_blank" rel="noopener">線上訂房</a></li>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -151,7 +151,7 @@
                                 <i class="fab fa-google"></i>
                                 在 Google Maps 留評價
                             </a>
-                            <a href="https://booking.owlting.com/kiwi-villa" class="btn-secondary">
+                            <a href="https://booking.owlting.com/kiwi-villa" class="btn-secondary" target="_blank" rel="noopener">
                                 <i class="fas fa-calendar-check"></i>
                                 立即預訂
                             </a>
