--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             
             <!-- Google Reviews Widget -->
             <div class="google-reviews-widget">
-                <div class="elfsight-app-e293512e-82e9-44d4-a2d3-985ea51c4baf" data-elfsight-app-lazy></div>
+                <div class="elfsight-app-e293512e-82e9-44d4-a2d3-985ea51c4baf"></div>
             </div>
             
             <div class="reviews-cta">
