--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     
                     <p>那是一場與美好不期而遇的開始。</p>
                 </div>
-                <a href="booking.html" class="btn-primary">即刻預訂</a>
+                <a href="https://booking.owlting.com/kiwi-villa" class="btn-primary" target="_blank" rel="noopener">即刻預訂</a>
             </div>
         </div>
     </section>
