--- a/backup_20250611_202505/notice.html
+++ b/backup_20250611_202505/notice.html
@@ -53,31 +53,28 @@
     
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/notice.css">
-    <link rel="stylesheet" href="styles/glassmorphism-ocean.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body class="ocean-body">
-    <!-- Navigation -->
+<body>
+    <!-- Header -->
     <header class="header">
-        <nav class="navbar glass-navbar">
+        <nav class="navbar">
             <div class="container">
                 <div class="nav-brand">
-                    <a href="index.html" aria-label="回首頁">
-                        <img src="images/logo/kiwi-villa-logo.png" alt="期遇度假會館logo" class="logo">
-                    </a>
+                    <img src="images/logo/kiwi-villa-logo.png" alt="期遇度假會館logo" class="logo">
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="index.html" class="nav-link glass-nav-link">首頁</a></li>
-                    <li><a href="about.html" class="nav-link glass-nav-link">細說期遇</a></li>
-                    <li><a href="location.html" class="nav-link glass-nav-link">地理資訊</a></li>
-                    <li><a href="rooms.html" class="nav-link glass-nav-link">房型設施</a></li>
-                    <li><a href="testimonials.html" class="nav-link glass-nav-link">客戶評價</a></li>
-                    <li><a href="qa.html" class="nav-link glass-nav-link">常見問題</a></li>
-                    <li><a href="notice.html" class="nav-link glass-nav-link active">訂房須知</a></li>
-                    <li><a href="https://booking.owlting.com/kiwi-villa" class="nav-link glass-btn-primary" target="_blank" rel="noopener">線上訂房</a></li>
+                    <li><a href="index.html" class="nav-link">首頁</a></li>
+                    <li><a href="about.html" class="nav-link">細說期遇</a></li>
+                    <li><a href="location.html" class="nav-link">地理資訊</a></li>
+                    <li><a href="rooms.html" class="nav-link">房型設施</a></li>
+                    <li><a href="testimonials.html" class="nav-link">客戶評價</a></li>
+                    <li><a href="qa.html" class="nav-link">常見問題</a></li>
+                    <li><a href="notice.html" class="nav-link active">訂房須知</a></li>
+                    <li><a href="https://booking.owlting.com/kiwi-villa" class="nav-link booking-btn" target="_blank" rel="noopener">線上訂房</a></li>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -384,7 +381,7 @@
                     <p>完成訂房手續即表示您已詳細閱讀並同意遵守以上所有規定。期遇度假會館保留最終解釋權，並有權要求違反規定的房客立即離開。</p>
                     <p>感謝您選擇期遇度假會館，我們將竭誠為您提供最優質的住宿體驗！</p>
                     <div class="agreement-buttons">
-                        <a href="booking.html" class="btn-primary glass-btn-primary">我同意並開始訂房</a>
+                        <a href="booking.html" class="btn-primary">我同意並開始訂房</a>
                         <a href="qa.html" class="btn-secondary">查看常見問題</a>
                     </div>
                 </div>
@@ -411,9 +408,9 @@
                 <div class="contact-item">
                     <h3>追蹤我們</h3>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/kiwi_villa/" class="social-link glass-social-link" target="_blank" rel="noopener" aria-label="Instagram 期遇度假會館"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.facebook.com/kiwivilla.home/" class="social-link glass-social-link" target="_blank" rel="noopener" aria-label="Facebook 期遇度假會館"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://page.line.me/ucz4004x" class="social-link glass-social-link" target="_blank" rel="noopener" aria-label="Line 期遇度假會館"><i class="fab fa-line"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-line"></i></a>
                     </div>
                 </div>
             </div>
@@ -424,11 +421,12 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <p>&copy; <span id="copyright-year">2025</span> 澎湖期遇度假會館 Kiwi Villa | By Ricky Wang</p>
+                <p>&copy; 2025 澎湖期遇度假會館 Kiwi Villa | By Ricky Wang</p>
             </div>
         </div>
     </footer>
 
     <script src="scripts/main.js"></script>
+    <script src="scripts/components.js"></script>
 </body>
 </html> 
