--- a/backup_20250611_202505/testimonials.html
+++ b/backup_20250611_202505/testimonials.html
@@ -52,6 +52,7 @@
     <title>客戶評價 | 期遇度假會館真實住宿體驗 | 澎湖民宿</title>
     
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/testimonials.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -76,25 +77,25 @@
     }
     </script>
 </head>
-<body class="ocean-body">
-    <!-- Navigation -->
+<body>
+    <!-- Header -->
     <header class="header">
-        <nav class="navbar glass-navbar">
+        <nav class="navbar">
             <div class="container">
                 <div class="nav-brand">
-                    <a href="index.html" aria-label="回首頁">
+                    <a href="index.html">
                         <img src="images/logo/kiwi-villa-logo.png" alt="期遇度假會館logo" class="logo">
                     </a>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="index.html" class="nav-link glass-nav-link">首頁</a></li>
-                    <li><a href="about.html" class="nav-link glass-nav-link">細說期遇</a></li>
-                    <li><a href="location.html" class="nav-link glass-nav-link">地理資訊</a></li>
-                    <li><a href="rooms.html" class="nav-link glass-nav-link">房型設施</a></li>
-                    <li><a href="testimonials.html" class="nav-link glass-nav-link active">客戶評價</a></li>
-                    <li><a href="qa.html" class="nav-link glass-nav-link">常見問題</a></li>
-                    <li><a href="notice.html" class="nav-link glass-nav-link">訂房須知</a></li>
-                    <li><a href="https://booking.owlting.com/kiwi-villa" class="nav-link glass-btn-primary" target="_blank" rel="noopener">線上訂房</a></li>
+                    <li><a href="index.html" class="nav-link">首頁</a></li>
+                    <li><a href="about.html" class="nav-link">細說期遇</a></li>
+                    <li><a href="location.html" class="nav-link">地理資訊</a></li>
+                    <li><a href="rooms.html" class="nav-link">房型設施</a></li>
+                    <li><a href="testimonials.html" class="nav-link active">客戶評價</a></li>
+                    <li><a href="qa.html" class="nav-link">常見問題</a></li>
+                    <li><a href="notice.html" class="nav-link">訂房須知</a></li>
+                    <li><a href="https://booking.owlting.com/kiwi-villa" class="nav-link booking-btn" target="_blank" rel="noopener">線上訂房</a></li>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -256,7 +257,7 @@
                         <h3>分享您的住宿體驗</h3>
                         <p>您的評價對我們和其他旅客都很重要，幫助我們提供更好的服務</p>
                         <div class="cta-buttons">
-                            <a href="https://maps.google.com/maps?cid=2406154076137473691" target="_blank" rel="noopener" class="btn-primary glass-btn-primary">
+                            <a href="https://maps.google.com/maps?cid=2406154076137473691" target="_blank" rel="noopener" class="btn-primary">
                                 <i class="fab fa-google"></i>
                                 在 Google Maps 留評價
                             </a>
@@ -290,9 +291,9 @@
                 <div class="contact-item">
                     <h3>追蹤我們</h3>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/kiwi_villa/" class="social-link glass-social-link" target="_blank" rel="noopener" aria-label="Instagram 期遇度假會館"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.facebook.com/kiwivilla.home/" class="social-link glass-social-link" target="_blank" rel="noopener" aria-label="Facebook 期遇度假會館"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://page.line.me/ucz4004x" class="social-link glass-social-link" target="_blank" rel="noopener" aria-label="Line 期遇度假會館"><i class="fab fa-line"></i></a>
+                        <a href="https://www.instagram.com/kiwi_villa/" class="social-link" target="_blank" rel="noopener" aria-label="Instagram 期遇度假會館"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/kiwivilla.home/" class="social-link" target="_blank" rel="noopener" aria-label="Facebook 期遇度假會館"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://page.line.me/ucz4004x" class="social-link" target="_blank" rel="noopener" aria-label="Line 期遇度假會館"><i class="fab fa-line"></i></a>
                     </div>
                 </div>
             </div>
@@ -303,11 +304,12 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <p>&copy; <span id="copyright-year">2025</span> 澎湖期遇度假會館 Kiwi Villa | By Ricky Wang</p>
+                <p>&copy; 2025 澎湖期遇度假會館 Kiwi Villa | By Ricky Wang</p>
             </div>
         </div>
     </footer>
 
     <script src="scripts/main.js"></script>
+    <script src="scripts/components.js"></script>
 </body>
 </html> 
