--- a/qa.html
+++ b/qa.html
@@ -327,15 +327,15 @@
             <div class="contact-grid">
                 <div class="contact-item">
                     <h3>聯絡我們</h3>
-                    <p><i class="fab fa-line"></i> Line: @kiwivilla</p>
+                    <p><a href="https://page.line.me/ucz4004x" target="_blank" rel="noopener"><i class="fab fa-line"></i> Line: @kiwivilla</a></p>
                     <p><i class="fab fa-weixin"></i> WeChat ID: rickywang4159</p>
-                    <p><i class="fas fa-phone"></i> 訂房熱線：0933636373</p>
-                    <p><i class="fas fa-envelope"></i> info@kiwi-villa.com</p>
+                    <p><a href="tel:0933636373"><i class="fas fa-phone"></i> 訂房熱線：0933636373</a></p>
+                    <p><a href="mailto:info@kiwi-villa.com"><i class="fas fa-envelope"></i> info@kiwi-villa.com</a></p>
                 </div>
                 <div class="contact-item">
                     <h3>地址</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> 台灣澎湖縣馬公市西衛里 346-347號</p>
-                    <p>NO.346-347, Xiwei Village, Magong City, Penghu County, Taiwan</p>
+                    <p><a href="https://www.google.com.tw/maps/place/%E6%9C%9F%E9%81%87%E5%BA%A6%E5%81%87%E6%9C%83%E9%A4%A8(2025%E7%81%AB%E7%86%B1%E8%A8%82%E6%88%BF%E4%B8%AD%EF%BC%81%E7%84%A1%E6%B5%B7%E6%99%AF%E9%9D%9E%E5%8C%85%E6%A3%9F%E4%B8%8D%E7%B6%B2%E7%BE%8E%E7%A6%81%E5%AF%B5%E7%89%A9%E6%B2%92%E5%94%B1%E6%AD%8C%E8%B5%B0%E8%B7%AF%E9%81%A0%EF%BC%8C%E8%AB%8B%E9%96%B1%E8%AE%80%E8%A8%82%E6%88%BF%E9%A0%88%E7%9F%A5)/@23.5835134,119.5842094,15z/data=!4m9!3m8!1s0x346c5b21b8abcda7:0x2157a9c94466e69b!5m2!4m1!1i2!8m2!3d23.5868758!4d119.5818157!16s%2Fg%2F11f4l9cgq1?entry=ttu&g_ep=EgoyMDI1MDYwOC4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener"><i class="fas fa-map-marker-alt"></i> 台灣澎湖縣馬公市西衛里 346-347號</a></p>
+                    <p><a href="https://www.google.com.tw/maps/place/%E6%9C%9F%E9%81%87%E5%BA%A6%E5%81%87%E6%9C%83%E9%A4%A8(2025%E7%81%AB%E7%86%B1%E8%A8%82%E6%88%BF%E4%B8%AD%EF%BC%81%E7%84%A1%E6%B5%B7%E6%99%AF%E9%9D%9E%E5%8C%85%E6%A3%9F%E4%B8%8D%E7%B6%B2%E7%BE%8E%E7%A6%81%E5%AF%B5%E7%89%A9%E6%B2%92%E5%94%B1%E6%AD%8C%E8%B5%B0%E8%B7%AF%E9%81%A0%EF%BC%8C%E8%AB%8B%E9%96%B1%E8%AE%80%E8%A8%82%E6%88%BF%E9%A0%88%E7%9F%A5)/@23.5835134,119.5842094,15z/data=!4m9!3m8!1s0x346c5b21b8abcda7:0x2157a9c94466e69b!5m2!4m1!1i2!8m2!3d23.5868758!4d119.5818157!16s%2Fg%2F11f4l9cgq1?entry=ttu&g_ep=EgoyMDI1MDYwOC4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener">NO.346-347, Xiwei Village, Magong City, Penghu County, Taiwan</a></p>
                 </div>
                 <div class="contact-item">
                     <h3>追蹤我們</h3>
