--- a/rooms.html
+++ b/rooms.html
@@ -53,6 +53,8 @@
     <title>房型設施 | 期遇度假會館房型介紹 | 澎湖民宿</title>
     
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/rooms.css">
+    <link rel="stylesheet" href="styles/glassmorphism-ocean.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -105,16 +107,32 @@
                     <div class="room-image-gallery">
                         <div class="image-slider">
                             <div class="slide active">
-                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room1.jpg" alt="期遇環境圖-豪華家庭房-主圖" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/luxury-family-room.webp" type="image/webp">
+                                    <source srcset="images/rooms/luxury-family-room.jpg" type="image/jpeg">
+                                    <img src="images/rooms/luxury-family-room.jpg" alt="期遇環境圖-豪華家庭房-主圖" loading="lazy">
+                                </picture>
                             </div>
                             <div class="slide">
-                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room2.jpg" alt="期遇環境圖-豪華家庭房-浴缸" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/luxury-family-room-2.webp" type="image/webp">
+                                    <source srcset="images/rooms/luxury-family-room-2.jpg" type="image/jpeg">
+                                    <img src="images/rooms/luxury-family-room-2.jpg" alt="期遇環境圖-豪華家庭房-浴缸" loading="lazy">
+                                </picture>
                             </div>
                             <div class="slide">
-                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room3.jpg" alt="期遇環境圖-豪華家庭房-陽台" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/luxury-family-room-3.webp" type="image/webp">
+                                    <source srcset="images/rooms/luxury-family-room-3.jpg" type="image/jpeg">
+                                    <img src="images/rooms/luxury-family-room-3.jpg" alt="期遇環境圖-豪華家庭房-陽台" loading="lazy">
+                                </picture>
                             </div>
                             <div class="slide">
-                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room4.jpg" alt="期遇環境圖-豪華家庭房-床鋪" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/luxury-family-room-4.webp" type="image/webp">
+                                    <source srcset="images/rooms/luxury-family-room-4.jpg" type="image/jpeg">
+                                    <img src="images/rooms/luxury-family-room-4.jpg" alt="期遇環境圖-豪華家庭房-床鋪" loading="lazy">
+                                </picture>
                             </div>
                         </div>
                         <div class="slider-nav">
@@ -176,13 +194,25 @@
                     <div class="room-image-gallery">
                         <div class="image-slider">
                             <div class="slide active">
-                                <img src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room1.jpg" alt="期遇環境圖-高級四人房-主圖" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/premium-quad-room.webp" type="image/webp">
+                                    <source srcset="images/rooms/premium-quad-room.jpg" type="image/jpeg">
+                                    <img src="images/rooms/premium-quad-room.jpg" alt="期遇環境圖-高級四人房-主圖" loading="lazy">
+                                </picture>
                             </div>
                             <div class="slide">
-                                <img src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room2.jpg" alt="期遇環境圖-高級四人房-陽台" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/premium-quad-room-2.webp" type="image/webp">
+                                    <source srcset="images/rooms/premium-quad-room-2.jpg" type="image/jpeg">
+                                    <img src="images/rooms/premium-quad-room-2.jpg" alt="期遇環境圖-高級四人房-陽台" loading="lazy">
+                                </picture>
                             </div>
                             <div class="slide">
-                                <img src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room3.jpg" alt="期遇環境圖-高級四人房-床鋪" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/premium-quad-room-3.webp" type="image/webp">
+                                    <source srcset="images/rooms/premium-quad-room-3.jpg" type="image/jpeg">
+                                    <img src="images/rooms/premium-quad-room-3.jpg" alt="期遇環境圖-高級四人房-床鋪" loading="lazy">
+                                </picture>
                             </div>
                         </div>
                         <div class="slider-nav">
@@ -238,16 +268,32 @@
                     <div class="room-image-gallery">
                         <div class="image-slider">
                             <div class="slide active">
-                                <img src="images/rooms/deluxeQuad/penghu-kiwi-villa-deluxe-quad-room1.jpg" alt="期遇環境圖-奢華四人房-主圖" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/deluxe-quad-room.webp" type="image/webp">
+                                    <source srcset="images/rooms/deluxe-quad-room.jpg" type="image/jpeg">
+                                    <img src="images/rooms/deluxe-quad-room.jpg" alt="期遇環境圖-奢華四人房-主圖" loading="lazy">
+                                </picture>
                             </div>
                             <div class="slide">
-                                <img src="images/rooms/deluxeQuad/penghu-kiwi-villa-deluxe-quad-room2.jpg" alt="期遇環境圖-奢華四人房-陽台景觀" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/deluxe-quad-room-2.webp" type="image/webp">
+                                    <source srcset="images/rooms/deluxe-quad-room-2.jpg" type="image/jpeg">
+                                    <img src="images/rooms/deluxe-quad-room-2.jpg" alt="期遇環境圖-奢華四人房-陽台景觀" loading="lazy">
+                                </picture>
                             </div>
                             <div class="slide">
-                                <img src="images/rooms/deluxeQuad/penghu-kiwi-villa-deluxe-quad-room3.jpg" alt="期遇環境圖-奢華四人房-床鋪" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/deluxe-quad-room-3.webp" type="image/webp">
+                                    <source srcset="images/rooms/deluxe-quad-room-3.jpg" type="image/jpeg">
+                                    <img src="images/rooms/deluxe-quad-room-3.jpg" alt="期遇環境圖-奢華四人房-床鋪" loading="lazy">
+                                </picture>
                             </div>
                             <div class="slide">
-                                <img src="images/rooms/deluxeQuad/penghu-kiwi-villa-deluxe-quad-room4.jpg" alt="期遇環境圖-奢華四人房-浴室" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/deluxe-quad-room-4.webp" type="image/webp">
+                                    <source srcset="images/rooms/deluxe-quad-room-4.jpg" type="image/jpeg">
+                                    <img src="images/rooms/deluxe-quad-room-4.jpg" alt="期遇環境圖-奢華四人房-浴室" loading="lazy">
+                                </picture>
                             </div>
                         </div>
                         <div class="slider-nav">
@@ -307,13 +353,25 @@
                     <div class="room-image-gallery">
                         <div class="image-slider">
                             <div class="slide active">
-                                <img src="images/rooms/premiumTriple/penghu-kiwi-villa-premium-triple-room1.jpg" alt="期遇度假會館-三人房-主圖" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/premium-triple-room.webp" type="image/webp">
+                                    <source srcset="images/rooms/premium-triple-room.jpg" type="image/jpeg">
+                                    <img src="images/rooms/premium-triple-room.jpg" alt="期遇度假會館-三人房-主圖" loading="lazy">
+                                </picture>
                             </div>
                             <div class="slide">
-                                <img src="images/rooms/premiumTriple/penghu-kiwi-villa-premium-triple-room2.jpg" alt="期遇度假會館-三人房-兒童小屋" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/premium-triple-room-2.webp" type="image/webp">
+                                    <source srcset="images/rooms/premium-triple-room-2.jpg" type="image/jpeg">
+                                    <img src="images/rooms/premium-triple-room-2.jpg" alt="期遇度假會館-三人房-兒童小屋" loading="lazy">
+                                </picture>
                             </div>
                             <div class="slide">
-                                <img src="images/rooms/premiumTriple/penghu-kiwi-villa-premium-triple-room3.jpg" alt="期遇度假會館-三人房-陽台" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/premium-triple-room-3.webp" type="image/webp">
+                                    <source srcset="images/rooms/premium-triple-room-3.jpg" type="image/jpeg">
+                                    <img src="images/rooms/premium-triple-room-3.jpg" alt="期遇度假會館-三人房-陽台" loading="lazy">
+                                </picture>
                             </div>
                         </div>
                         <div class="slider-nav">
@@ -370,13 +428,25 @@
                     <div class="room-image-gallery">
                         <div class="image-slider">
                             <div class="slide active">
-                                <img src="images/rooms/premiumTwin/penghu-kiwi-villa-premium-twin-room1.jpg" alt="期遇度假會館-雙床房-主圖" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/premium-twin-room.webp" type="image/webp">
+                                    <source srcset="images/rooms/premium-twin-room.jpg" type="image/jpeg">
+                                    <img src="images/rooms/premium-twin-room.jpg" alt="期遇度假會館-雙床房-主圖" loading="lazy">
+                                </picture>
                             </div>
                             <div class="slide">
-                                <img src="images/rooms/premiumTwin/penghu-kiwi-villa-premium-twin-room2.jpg" alt="期遇度假會館-雙床房-陽台" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/premium-twin-room-2.webp" type="image/webp">
+                                    <source srcset="images/rooms/premium-twin-room-2.jpg" type="image/jpeg">
+                                    <img src="images/rooms/premium-twin-room-2.jpg" alt="期遇度假會館-雙床房-陽台" loading="lazy">
+                                </picture>
                             </div>
                             <div class="slide">
-                                <img src="images/rooms/premiumTwin/penghu-kiwi-villa-premium-twin-room3.jpg" alt="期遇度假會館-雙床房-浴室" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/premium-twin-room-3.webp" type="image/webp">
+                                    <source srcset="images/rooms/premium-twin-room-3.jpg" type="image/jpeg">
+                                    <img src="images/rooms/premium-twin-room-3.jpg" alt="期遇度假會館-雙床房-浴室" loading="lazy">
+                                </picture>
                             </div>
                         </div>
                         <div class="slider-nav">
@@ -432,13 +502,25 @@
                     <div class="room-image-gallery">
                         <div class="image-slider">
                             <div class="slide active">
-                                <img src="images/rooms/premiumDouble/penghu-kiwi-villa-premium-double-room1.jpg" alt="期遇度假會館-大床房-主圖" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/premium-double-room.webp" type="image/webp">
+                                    <source srcset="images/rooms/premium-double-room.jpg" type="image/jpeg">
+                                    <img src="images/rooms/premium-double-room.jpg" alt="期遇度假會館-大床房-主圖" loading="lazy">
+                                </picture>
                             </div>
                             <div class="slide">
-                                <img src="images/rooms/premiumDouble/penghu-kiwi-villa-premium-double-room2.jpg" alt="期遇度假會館-大床房-陽台" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/premium-double-room-2.webp" type="image/webp">
+                                    <source srcset="images/rooms/premium-double-room-2.jpg" type="image/jpeg">
+                                    <img src="images/rooms/premium-double-room-2.jpg" alt="期遇度假會館-大床房-陽台" loading="lazy">
+                                </picture>
                             </div>
                             <div class="slide">
-                                <img src="images/rooms/premiumDouble/penghu-kiwi-villa-premium-double-room3.jpg" alt="期遇度假會館-大床房-浴室" loading="lazy">
+                                <picture>
+                                    <source srcset="images/rooms/premium-double-room-3.webp" type="image/webp">
+                                    <source srcset="images/rooms/premium-double-room-3.jpg" type="image/jpeg">
+                                    <img src="images/rooms/premium-double-room-3.jpg" alt="期遇度假會館-大床房-浴室" loading="lazy">
+                                </picture>
                             </div>
                         </div>
                         <div class="slider-nav">
@@ -527,15 +609,15 @@
             <div class="contact-grid">
                 <div class="contact-item">
                     <h3>聯絡我們</h3>
-                    <p><i class="fab fa-line"></i> Line: @kiwivilla</p>
+                    <p><a href="https://page.line.me/ucz4004x" target="_blank" rel="noopener"><i class="fab fa-line"></i> Line: @kiwivilla</a></p>
                     <p><i class="fab fa-weixin"></i> WeChat ID: rickywang4159</p>
-                    <p><i class="fas fa-phone"></i> 訂房熱線：0933636373</p>
-                    <p><i class="fas fa-envelope"></i> info@kiwi-villa.com</p>
+                    <p><a href="tel:0933636373"><i class="fas fa-phone"></i> 訂房熱線：0933636373</a></p>
+                    <p><a href="mailto:info@kiwi-villa.com"><i class="fas fa-envelope"></i> info@kiwi-villa.com</a></p>
                 </div>
                 <div class="contact-item">
                     <h3>地址</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> 台灣澎湖縣馬公市西衛里 346-347號</p>
-                    <p>NO.346-347, Xiwei Village, Magong City, Penghu County, Taiwan</p>
+                    <p><a href="https://www.google.com.tw/maps/place/%E6%9C%9F%E9%81%87%E5%BA%A6%E5%81%87%E6%9C%83%E9%A4%A8(2025%E7%81%AB%E7%86%B1%E8%A8%82%E6%88%BF%E4%B8%AD%EF%BC%81%E7%84%A1%E6%B5%B7%E6%99%AF%E9%9D%9E%E5%8C%85%E6%A3%9F%E4%B8%8D%E7%B6%B2%E7%BE%8E%E7%A6%81%E5%AF%B5%E7%89%A9%E6%B2%92%E5%94%B1%E6%AD%8C%E8%B5%B0%E8%B7%AF%E9%81%A0%EF%BC%8C%E8%AB%8B%E9%96%B1%E8%AE%80%E8%A8%82%E6%88%BF%E9%A0%88%E7%9F%A5)/@23.5835134,119.5842094,15z/data=!4m9!3m8!1s0x346c5b21b8abcda7:0x2157a9c94466e69b!5m2!4m1!1i2!8m2!3d23.5868758!4d119.5818157!16s%2Fg%2F11f4l9cgq1?entry=ttu&g_ep=EgoyMDI1MDYwOC4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener"><i class="fas fa-map-marker-alt"></i> 台灣澎湖縣馬公市西衛里 346-347號</a></p>
+                    <p><a href="https://www.google.com.tw/maps/place/%E6%9C%9F%E9%81%87%E5%BA%A6%E5%81%87%E6%9C%83%E9%A4%A8(2025%E7%81%AB%E7%86%B1%E8%A8%82%E6%88%BF%E4%B8%AD%EF%BC%81%E7%84%A1%E6%B5%B7%E6%99%AF%E9%9D%9E%E5%8C%85%E6%A3%9F%E4%B8%8D%E7%B6%B2%E7%BE%8E%E7%A6%81%E5%AF%B5%E7%89%A9%E6%B2%92%E5%94%B1%E6%AD%8C%E8%B5%B0%E8%B7%AF%E9%81%A0%EF%BC%8C%E8%AB%8B%E9%96%B1%E8%AE%80%E8%A8%82%E6%88%BF%E9%A0%88%E7%9F%A5)/@23.5835134,119.5842094,15z/data=!4m9!3m8!1s0x346c5b21b8abcda7:0x2157a9c94466e69b!5m2!4m1!1i2!8m2!3d23.5868758!4d119.5818157!16s%2Fg%2F11f4l9cgq1?entry=ttu&g_ep=EgoyMDI1MDYwOC4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener">NO.346-347, Xiwei Village, Magong City, Penghu County, Taiwan</a></p>
                 </div>
                 <div class="contact-item">
                     <h3>追蹤我們</h3>
