--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     
     <title>期遇度假會館 Kiwi Villa | 澎湖民宿推薦 | Taiwan, Penghu County</title>
     
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;600;700&display=swap" rel="stylesheet">
