--- a/glassmorphism-ocean-demo.html
+++ b/glassmorphism-ocean-demo.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="styles/glassmorphism-ocean.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/custom-icons.css">
 </head>
 <body class="ocean-body">
     <div style="max-width: 1200px; margin: 0 auto; padding: 40px 20px; position: relative; z-index: 10;">
