--- a/location.html
+++ b/location.html
@@ -58,8 +58,10 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;600;700&display=swap&subset=chinese-traditional" rel="stylesheet">
     <link rel="stylesheet" href="styles/custom-icons.css">
+    <link rel="stylesheet" href="styles/font-optimization.css">
+    <link rel="stylesheet" href="styles/svg-icons.css">
 </head>
 <body class="ocean-body">
     <!-- Navigation -->
