--- a/index.html
+++ b/index.html
@@ -261,6 +261,9 @@
         
         .nav-brand .logo {
             height: 50px;
+            width: auto;
+            object-fit: contain;
+            image-rendering: -webkit-optimize-contrast;
         }
         
         .nav-menu {
