--- a/notice.html
+++ b/notice.html
@@ -37,7 +37,7 @@
     <!-- Open Graph 標籤 -->
     <meta property="og:title" content="訂房須知 | 期遇度假會館住宿規定 | 澎湖民宿">
     <meta property="og:description" content="詳細訂房規定、入住退房時間、取消政策、住宿規則等重要資訊，確保您的住宿體驗順利。">
-    <meta property="og:image" content="https://www.kiwi-villa.com/images/hero/main-hall-environment.jpg">
+    <meta property="og:image" content="https://www.kiwi-villa.com/images/hero/main-hall-environment.webp">
     <meta property="og:url" content="https://www.kiwi-villa.com/notice.html">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="期遇度假會館 Kiwi Villa">
@@ -47,7 +47,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="訂房須知 | 期遇度假會館住宿規定">
     <meta name="twitter:description" content="詳細訂房規定、入住退房時間、取消政策等重要資訊。">
-    <meta name="twitter:image" content="https://www.kiwi-villa.com/images/hero/main-hall-environment.jpg">
+    <meta name="twitter:image" content="https://www.kiwi-villa.com/images/hero/main-hall-environment.webp">
     
     <title>訂房須知 | 期遇度假會館住宿規定 | 澎湖民宿</title>
     
