--- a/qa.html
+++ b/qa.html
@@ -37,7 +37,7 @@
     <!-- Open Graph 標籤 -->
     <meta property="og:title" content="常見問題 Q&A | 期遇度假會館 | 澎湖民宿">
     <meta property="og:description" content="房價說明、海景房型、包棟服務、設施介紹等詳細Q&A解答，解答您對期遇度假會館的疑問。">
-    <meta property="og:image" content="https://www.kiwi-villa.com/images/hero/main-hall-environment.jpg">
+    <meta property="og:image" content="https://www.kiwi-villa.com/images/hero/main-hall-environment.webp">
     <meta property="og:url" content="https://www.kiwi-villa.com/qa.html">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="期遇度假會館 Kiwi Villa">
@@ -47,7 +47,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="常見問題 Q&A | 期遇度假會館">
     <meta name="twitter:description" content="房價說明、海景房型、包棟服務等詳細Q&A解答。">
-    <meta name="twitter:image" content="https://www.kiwi-villa.com/images/hero/main-hall-environment.jpg">
+    <meta name="twitter:image" content="https://www.kiwi-villa.com/images/hero/main-hall-environment.webp">
     
     <title>常見問題 Q&A | 期遇度假會館 | 澎湖民宿</title>
     
