--- a/testimonials.html
+++ b/testimonials.html
@@ -37,7 +37,7 @@
     <!-- Open Graph 標籤 -->
     <meta property="og:title" content="客戶評價 | 期遇度假會館真實住宿體驗">
     <meta property="og:description" content="查看期遇度假會館的真實客戶評價，Google Maps五星好評，了解其他旅客的住宿體驗分享。">
-    <meta property="og:image" content="https://www.kiwi-villa.com/images/hero/main-hall-environment.jpg">
+    <meta property="og:image" content="https://www.kiwi-villa.com/images/hero/main-hall-environment.webp">
     <meta property="og:url" content="https://www.kiwi-villa.com/testimonials.html">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="期遇度假會館 Kiwi Villa">
@@ -47,7 +47,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="客戶評價 | 期遇度假會館真實住宿體驗">
     <meta name="twitter:description" content="查看期遇度假會館的真實客戶評價和住宿體驗分享。">
-    <meta name="twitter:image" content="https://www.kiwi-villa.com/images/hero/main-hall-environment.jpg">
+    <meta name="twitter:image" content="https://www.kiwi-villa.com/images/hero/main-hall-environment.webp">
     
     <title>客戶評價 | 期遇度假會館真實住宿體驗 | 澎湖民宿</title>
     
