--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
     }
     </script>
 </head>
-<body class="ocean-body">
+<body>
     <!-- Navigation -->
     <header class="header">
-        <nav class="navbar glass-navbar">
+        <nav class="navbar">
             <div class="container">
                 <div class="nav-brand">
                     <a href="index.html" aria-label="回首頁">
@@ -206,14 +206,14 @@
                     </a>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="index.html" class="nav-link glass-nav-link active">首頁</a></li>
-                    <li><a href="about.html" class="nav-link glass-nav-link">細說期遇</a></li>
-                    <li><a href="location.html" class="nav-link glass-nav-link">地理資訊</a></li>
-                    <li><a href="rooms.html" class="nav-link glass-nav-link">房型設施</a></li>
-                    <li><a href="testimonials.html" class="nav-link glass-nav-link">客戶評價</a></li>
-                    <li><a href="qa.html" class="nav-link glass-nav-link">常見問題</a></li>
-                    <li><a href="notice.html" class="nav-link glass-nav-link">訂房須知</a></li>
-                    <li><a href="https://booking.owlting.com/kiwi-villa" class="nav-link glass-btn-primary" target="_blank" rel="noopener">線上訂房</a></li>
+                    <li><a href="index.html" class="nav-link active">首頁</a></li>
+                    <li><a href="about.html" class="nav-link">細說期遇</a></li>
+                    <li><a href="location.html" class="nav-link">地理資訊</a></li>
+                    <li><a href="rooms.html" class="nav-link">房型設施</a></li>
+                    <li><a href="testimonials.html" class="nav-link">客戶評價</a></li>
+                    <li><a href="qa.html" class="nav-link">常見問題</a></li>
+                    <li><a href="notice.html" class="nav-link">訂房須知</a></li>
+                    <li><a href="https://booking.owlting.com/kiwi-villa" class="nav-link booking-btn" target="_blank" rel="noopener">線上訂房</a></li>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -280,32 +280,32 @@
                     
                     <p>那是一場與美好不期而遇的開始。</p>
                 </div>
-                <a href="https://booking.owlting.com/kiwi-villa" class="btn-primary glass-btn-primary" target="_blank" rel="noopener">即刻預訂</a>
+                <a href="https://booking.owlting.com/kiwi-villa" class="btn-primary" target="_blank" rel="noopener">即刻預訂</a>
             </div>
         </div>
     </section>
 
     <!-- Features Section -->
-    <section class="features ocean-features">
+    <section class="features">
         <div class="container">
-            <h2 class="section-title ocean-title">澎湖優質民宿</h2>
+            <h2 class="section-title">澎湖優質民宿</h2>
             <div class="features-grid">
-                <div class="feature-card glass-card float-animation">
-                    <div class="feature-icon glass-icon">
+                <div class="feature-card">
+                    <div class="feature-icon">
                         <i class="fas fa-building"></i>
                     </div>
                     <h3>歐洲巴洛克建築</h3>
                     <p>獨樹一格的歐洲巴洛克古典立體建築理念，在海島中展現典雅風情</p>
                 </div>
-                <div class="feature-card glass-card float-animation">
-                    <div class="feature-icon glass-icon">
+                <div class="feature-card">
+                    <div class="feature-icon">
                         <i class="fas fa-map-marker-alt"></i>
                     </div>
                     <h3>絕佳地理位置</h3>
                     <p>三面環海半島地形，輕鬆漫步即達海邊，距離市區商圈僅9分鐘車程</p>
                 </div>
-                <div class="feature-card glass-card float-animation">
-                    <div class="feature-icon glass-icon">
+                <div class="feature-card">
+                    <div class="feature-icon">
                         <i class="fas fa-bed"></i>
                     </div>
                     <h3>奢華住宿體驗</h3>
@@ -335,9 +335,9 @@
                 <div class="contact-item">
                     <h3>追蹤我們</h3>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/kiwi_villa/" class="social-link glass-social-link" target="_blank" rel="noopener" aria-label="Instagram 期遇度假會館"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.facebook.com/kiwivilla.home/" class="social-link glass-social-link" target="_blank" rel="noopener" aria-label="Facebook 期遇度假會館"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://page.line.me/ucz4004x" class="social-link glass-social-link" target="_blank" rel="noopener" aria-label="Line 期遇度假會館"><i class="fab fa-line"></i></a>
+                                            <a href="https://www.instagram.com/kiwi_villa/" class="social-link" target="_blank" rel="noopener" aria-label="Instagram 期遇度假會館"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/kiwivilla.home/" class="social-link" target="_blank" rel="noopener" aria-label="Facebook 期遇度假會館"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://page.line.me/ucz4004x" class="social-link" target="_blank" rel="noopener" aria-label="Line 期遇度假會館"><i class="fab fa-line"></i></a>
                     </div>
                 </div>
             </div>
