--- a/qa.html
+++ b/qa.html
@@ -366,6 +366,7 @@
         </div>
     </footer>
 
+    <link rel="stylesheet" href="styles/bottom-animations.css">
     <script src="scripts/main.js"></script>
     <script src="scripts/faq.js"></script>
 </body>
