--- a/rooms.html
+++ b/rooms.html
@@ -61,6 +61,7 @@
     <link rel="stylesheet" href="styles/custom-icons.css">
     <link rel="stylesheet" href="styles/font-optimization.css">
     <link rel="stylesheet" href="styles/svg-icons.css">
+    <link rel="stylesheet" href="styles/bottom-animations.css">
 </head>
 <body class="ocean-body">
     <!-- Navigation -->
