--- a/testimonials.html
+++ b/testimonials.html
@@ -310,6 +310,7 @@
         </div>
     </footer>
 
+    <link rel="stylesheet" href="styles/bottom-animations.css">
     <script src="scripts/main.js"></script>
 </body>
 </html> 
