--- a/location.html
+++ b/location.html
@@ -311,6 +311,7 @@
         </div>
     </footer>
 
+    <link rel="stylesheet" href="styles/bottom-animations.css">
     <script src="scripts/main.js"></script>
 </body>
 </html>
