--- a/notice.html
+++ b/notice.html
@@ -431,6 +431,7 @@
         </div>
     </footer>
 
+    <link rel="stylesheet" href="styles/bottom-animations.css">
     <script src="scripts/main.js"></script>
 </body>
 </html> 
