--- a/rooms.html
+++ b/rooms.html
@@ -106,7 +106,7 @@
             <!-- Rooms Grid -->
             <section class="rooms-grid">
                 <!-- 豪華家庭房 -->
-                <div class="room-card">
+                <div class="room-card" id="room-201">
                     <div class="room-image-gallery">
                         <div class="image-slider">
                             <div class="slide active">
@@ -193,7 +193,7 @@
                 </div>
 
                 <!-- 高級四人房 -->
-                <div class="room-card">
+                <div class="room-card" id="room-203">
                     <div class="room-image-gallery">
                         <div class="image-slider">
                             <div class="slide active">
@@ -267,7 +267,7 @@
                 </div>
 
                 <!-- 奢華四人房 -->
-                <div class="room-card">
+                <div class="room-card" id="room-205">
                     <div class="room-image-gallery">
                         <div class="image-slider">
                             <div class="slide active">
@@ -352,7 +352,7 @@
                 </div>
 
                 <!-- 高級三人房 -->
-                <div class="room-card">
+                <div class="room-card" id="room-303">
                     <div class="room-image-gallery">
                         <div class="image-slider">
                             <div class="slide active">
@@ -427,7 +427,7 @@
                 </div>
 
                 <!-- 高級雙床房 -->
-                <div class="room-card">
+                <div class="room-card" id="room-302">
                     <div class="room-image-gallery">
                         <div class="image-slider">
                             <div class="slide active">
@@ -501,7 +501,7 @@
                 </div>
 
                 <!-- 高級雙人房 -->
-                <div class="room-card">
+                <div class="room-card" id="room-305">
                     <div class="room-image-gallery">
                         <div class="image-slider">
                             <div class="slide active">
